vlib/v/checker/tests/oct_lit_has_space_err.vv
fn main() {
    a := 0o1234  567
}
